<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/homeMenu"
        android:icon="@drawable/home"
        android:title="@string/home" />

    <item
        android:id="@+id/searchMenu"
        android:icon="@drawable/search"
        android:title="@string/search" />

    <item
        android:id="@+id/favMenu"
        android:icon="@drawable/favorite"
        android:title="@string/favorite" />

    <item
        android:id="@+id/countries"
        android:icon="@drawable/country"
        android:title="@string/countries" />
    <item
        android:id="@+id/meal_plan"
        android:icon="@drawable/meal_plan_ic"
        android:title="@string/meal_plan" />

    <!-- <item
         android:id="@+id/profileMenu"
         android:icon="@drawable/user"
         android:title="@string/profile" />-->


</menu>