<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeRefreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment.ProfileFragment"

    >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/image_profile"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:src="@drawable/image_profile" />

        <TextView
            android:id="@+id/accountDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="10dp"
            android:layout_marginTop="240dp"
            android:text="@string/accoutn_details"
            android:textSize="24sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/UserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="290dp"
            android:text="@string/username"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/UserNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="130dp"
            android:layout_marginTop="290dp"
            android:text="@string/galal_ahmed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/email_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="340dp"
            android:text="@string/email_profile"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/Email_profile_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="70dp"
            android:layout_marginTop="340dp"
            android:text="@string/examle_gmail_com"
            android:textSize="20sp" />

        <Spinner
            android:id="@+id/language_spinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:layout_marginTop="400dp"
            android:layout_marginEnd="10dp"
            android:entries="@array/languages_array" />

        <ImageView
            android:id="@+id/log_out"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="170dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/black"
            android:src="@drawable/exit"
            android:text="@string/log_out" />

    </FrameLayout>


</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>





