<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.AuthActivities.SignUp.SignUp_Screen">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/image"
        android:src="@drawable/bg4"
        android:id="@+id/image_reg"
        android:scaleType="centerCrop"
        android:foreground="@drawable/forground_shape"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_reg"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/happy"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintEnd_toEndOf="@id/image_reg"
        app:layout_constraintStart_toStartOf="@id/image_reg"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/Register"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_extra_light_italic"
        android:textColor="@color/white"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/text_reg"
        app:layout_constraintStart_toStartOf="@id/text_reg"
        app:layout_constraintTop_toBottomOf="@id/text_reg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".02"
        />
    
    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/full_name"
        android:importantForAutofill="no"
        android:fontFamily="@font/poppins_extra_light_italic"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Register"
        android:layout_margin="20dp"
        android:drawableStart="@drawable/account_circle"
        android:hint="@string/full_name"
        android:textColorHint="@color/cardview_dark_background"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:background="@drawable/ed"
        app:layout_constraintWidth_percent=".8"
        android:inputType="text"
        android:paddingStart="5dp"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:id="@+id/Email"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_extra_light_italic"
        android:paddingStart="5dp"
        app:layout_constraintStart_toStartOf="@id/full_name"
        app:layout_constraintEnd_toEndOf="@id/full_name"
        app:layout_constraintTop_toBottomOf="@id/full_name"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/email"
        android:hint="@string/email"
        android:textColorHint="@color/cardview_dark_background"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        android:background="@drawable/ed"
        app:layout_constraintWidth_percent=".8"
        android:inputType="text"
        tools:ignore="RtlSymmetry,TextFields" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/ed"
        android:id="@+id/password_toggle"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_extra_light_italic"
        app:layout_constraintStart_toStartOf="@id/Email"
        app:layout_constraintEnd_toEndOf="@id/Email"
        app:layout_constraintTop_toBottomOf="@id/Email"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:paddingStart="5dp"
        android:drawableEnd="@drawable/hidden"
        android:drawableStart="@drawable/key"
        android:paddingEnd="5dp"
        android:hint="@string/password"
        android:textColorHint="@color/cardview_dark_background"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintWidth_percent=".8"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/ed"
        android:id="@+id/password_Confirm"
        android:importantForAutofill="no"
        android:textColor="@color/white"
        android:fontFamily="@font/poppins_extra_light_italic"
        app:layout_constraintStart_toStartOf="@id/password_toggle"
        app:layout_constraintEnd_toEndOf="@id/password_toggle"
        app:layout_constraintTop_toBottomOf="@id/password_toggle"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="30dp"
        android:drawableStart="@drawable/key"
        android:drawableEnd="@drawable/hidden"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:hint="@string/confirm_password"
        android:textColorHint="@color/cardview_dark_background"
        android:drawablePadding="13dp"
        android:backgroundTint="#CCCCCC"
        app:layout_constraintWidth_percent=".8"
        android:inputType="textPassword"
        tools:ignore="TextFields" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:id="@+id/button_register"
        android:text="@string/register"
        android:padding="19dp"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_toggle"
        app:layout_constraintVertical_bias="0.5"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="register_button"
        android:backgroundTint="@color/cardview_dark_background"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/already_have_an_account"
        android:id="@+id/Login_a"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_margin="20dp"
        android:fontFamily="@font/poppins_extra_light_italic"
        app:layout_constraintEnd_toStartOf="@id/Text_Login"
        app:layout_constraintStart_toStartOf="@id/button_register"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".01"
        />

    <TextView
        android:id="@+id/Text_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:text="@string/login"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@color/purple_700"
        android:textSize="18sp"
        android:textStyle="bold"
        android:paddingEnd="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/Login_a"
        app:layout_constraintEnd_toEndOf="@id/button_register"
        app:layout_constraintTop_toBottomOf="@id/button_register"
        app:layout_constraintVertical_bias="0.01"
        android:onClick="login_text"
        tools:ignore="RtlSymmetry" />

    <ProgressBar
        android:id="@+id/progress_cir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>