<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Auth.Welcome_Screen">
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/image_welcome"
        android:src="@drawable/bg2"
        android:scaleType="centerCrop"
        android:foreground="@drawable/forground_shape"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Text_welcome"
        android:fontFamily="@font/beth_ellen"
        android:text="@string/welcome_text"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.4"
        android:layout_margin="20dp"
        />
    
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:id="@+id/button_reg_Welcome"
        android:text="@string/register"
        android:padding="19dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Text_welcome"
        app:layout_constraintVertical_bias="0.6"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="register_Screen"
        android:backgroundTint="@color/cardview_dark_background"
        />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:text="@string/login"
        android:padding="19dp"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_reg_Welcome"
        app:layout_constraintVertical_bias="0.5"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="Login_screen"
        android:backgroundTint="@color/cardview_dark_background"

        />



</androidx.constraintlayout.widget.ConstraintLayout>