<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Auth.ForgetPassword">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/bg4"
        android:id="@+id/image_reg"
        android:scaleType="centerCrop"
        android:foreground="@drawable/forground_shape"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Txt_forget"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".4"
        android:text="@string/text_forget_screen"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="22sp"
        android:fontFamily="@font/beth_ellen"
        android:layout_margin="16dp"
        android:textStyle="italic"
        />

    <EditText
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@drawable/ed"
        android:paddingStart="5dp"
        android:id="@+id/Edit_forgetPassword"
        android:hint="@string/email"
        android:drawableStart="@drawable/email"
        android:drawablePadding="14dp"
        app:layout_constraintStart_toStartOf="@id/Txt_forget"
        app:layout_constraintEnd_toEndOf="@id/Txt_forget"
        app:layout_constraintTop_toBottomOf="@id/Txt_forget"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/cardview_dark_background"
        android:layout_marginTop="40dp"
        tools:ignore="RtlSymmetry,TextFields" />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintWidth_percent=".8"
        android:id="@+id/text_send_forget_password"
        android:text="@string/send"
        android:padding="19dp"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:onClick="SendForgetPassword"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="@id/Edit_forgetPassword"
        app:layout_constraintEnd_toEndOf="@id/Edit_forgetPassword"
        app:layout_constraintTop_toBottomOf="@id/Edit_forgetPassword"
        android:layout_marginTop="40dp"
        />

    <ProgressBar
        android:id="@+id/progress_circular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>